--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,7 +7,9 @@
  */
 
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
-
+.mce-container, .mce-container * {
+  display:none !important;
+}
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
