--- a/public/css/pages-style.css
+++ b/public/css/pages-style.css
@@ -694,8 +694,9 @@ body
 	padding-right: 3rem !important;
 	padding-left: 3rem !important;
 	text-align: center;
-	overflow: hidden;
-	height: auto;
+	overflow:hidden;
+
+
 
 }
 .portfolio-project a:hover, .portfolio-project a:active, .portfolio-project a:link, .portfolio-project a:visited
@@ -740,11 +741,15 @@ body
 {
 	width: 100%;
 	margin-top: 60px;
+	object-fit: scale-down;
+
+
 }
 .project-img img
 {
-	width: 100%;
-	height: auto;
+	width: auto;
+	max-width: 100%;
+	height: 50%;
 }
 
 .load-more-btn
@@ -760,7 +765,6 @@ body
 	letter-spacing: .1em;
 	word-spacing: .35em;
 	height: 5rem;
-	line-height: 4.8rem;
 	vertical-align: middle;
 	border-radius: 2.5rem;
 	border: 1px solid #03a8f5;
